--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-*.pyc
+-NOTES
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Local development settings
+.env
+
+# Django development server PID file
+*.pid
+
+# Logs
+*.log
+
+# Temporary files
+*.swp
+*~
+
+# Media files (if using local storage during development)
+/media/
+
+# Static files (if using local storage during development)
+/static/
+
+# Database
+*.sqlite3
+*.db
